--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "allowJs": true
+    "allowJs": true,
+    "declaration": true
   },
   "include": [
     "src/**/*.ts"
